# optee_qemu

./: README.md
linux/arch/arm/tools/: syscall.tbl
linux/include/linux/: syscalls.h
linux/net/: socket.c
linux/net/core/: dev.c
linux/net/ipv4/: tcp_output.c
optee_examples/blur_image/: CMakeLists.txt
optee_examples/blur_image/host/: Makefile  main.c
optee_examples/blur_image_demo/: CMakeLists.txt
optee_examples/blur_image_demo/host/: Makefile  main.c
optee_examples/get_policy/: Android.mk  CMakeLists.txt
optee_examples/get_policy/host/: Makefile  main.c
optee_examples/get_policy/ta/: Android.mk  Makefile  get_policy_ta.c  sub.mk  user_ta_header_defines.h
optee_examples/get_policy/ta/include/: get_policy_ta.h
optee_examples/navigator/: CMakeLists.txt
optee_examples/navigator/host/: Makefile
optee_examples/pid_to_process_name/: CMakeLists.txt
optee_examples/pid_to_process_name/host/: Makefile  main.c
optee_examples/process_flowctl/: Android.mk  CMakeLists.txt
optee_examples/process_flowctl/host/: Makefile  main.c
optee_examples/process_flowctl/ta/: Android.mk  Makefile  process_flowctl_ta.c  sub.mk  user_ta_header_defines.h
optee_examples/process_flowctl/ta/include/: process_flowctl_ta.h
optee_examples/take_picture/: CMakeLists.txt
optee_examples/take_picture/host/: Makefile  main.c
optee_examples/take_picture_demo/: CMakeLists.txt
optee_examples/take_picture_demo/host/: Makefile  main.c
optee_os/lib/libutee/include/: process_flowctl_ta.h
qemu/roms/seabios/: config.mak
